Set twitter in new devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <%= render partial: 'users/shared/menu_bar'  %>
+    <p class='alert'><%= alert %></p>
+    <p class='notice'><%= notice %></p>
     <%= yield %>
   </body>
 </html>
